--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26 //27
     defaultConfig {
         multiDexEnabled true
         applicationId "com.example.admin.chatlive"
         minSdkVersion 23
-        targetSdkVersion 27
+        targetSdkVersion 26 //27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,15 +20,31 @@ android {
 }
 
 dependencies {
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    testCompile 'junit:junit:4.12'
+
+    /**
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0' // 27.1.1
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+**/
     //Add Library
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.firebaseui:firebase-ui:4.1.0'
+   // implementation 'com.android.support:design:27.1.1'
+   // implementation 'com.firebaseui:firebase-ui:4.1.0'
+
+    //Update
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.firebaseui:firebase-ui:0.6.2'
+    compile 'com.google.gms:google-services:3.1.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
